--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
  	<meta name="viewport" content="width=device-width, initial-scale=1">
- 	<link rel="stylesheet" href="css/bootstrap.min.css">
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <title>Mini Excavation Daudelin</title>
 </head>
@@ -100,119 +100,119 @@
 		<h1 class="text-uppercase title" id="projets">Réalisations</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_01.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_01.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_01.jpg')">
 					</div>
 				</a>
 			</div>
 			
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_02.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_02.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_02.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_03.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_03.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_03.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_04.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_04.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_04.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_05.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_05.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_05.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_06.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_06.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_06.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_07.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_07.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_07.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_08.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_08.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_08.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_09.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_09.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_09.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_10.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_10.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_10.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_11.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_11.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_11.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_12.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_12.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_12.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_13.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_13.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_13.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_14.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_14.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_14.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_15.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_15.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_15.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_16.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_16.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_16.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a class="showModal" data-img="images/projets/projet_17.jpg">
+				<a href="#theModal" class="showModal" data-img="images/projets/projet_17.jpg">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_17.jpg')">
 					</div>
 				</a>
@@ -231,13 +231,13 @@
 		<br>
 		<div class="row">
 		 	<div class="col-sm-4">
-		 		<a class="showModal" data-img="images/equipement/pelle.jpg"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
+		 		<a href="#theModal" class="showModal" data-img="images/equipement/pelle.jpg"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a class="showModal" data-img="images/equipement/tracteur.jpg"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
+		 		<a href="#theModal" class="showModal" data-img="images/equipement/tracteur.jpg"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a class="showModal" data-img="images/equipement/remorque.jpg"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
+		 		<a href="#theModal" class="showModal" data-img="images/equipement/remorque.jpg"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
 		 	</div>
 	 	</div>
 	</section>
@@ -306,8 +306,19 @@
 	</div>
 </footer>
 
-<script src="js/jquery-1.12.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<!-- jQuery -->
+<script
+  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous">
+</script>
+
+<!-- Bootstrap js -->
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+</script>
+
 <script src="js/script.js"></script>
 <script>
 	$('.showModal').click(function() {
