--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/thumbnail/pelle.jpg" class="img-responsive">
 				<h3>Excavation</h3>
 				<br>
-				<p>Confiez-nous vos projets d'excavation en tout genre</p>
+				<p>Confiez-nous vos projets d'excavation de tout genre</p>
 				<ul>
 					<li>Drainage</li>
 					<li>Tranchées de toutes sortes
@@ -100,119 +100,119 @@
 		<h1 class="text-uppercase title" id="projets">Réalisations</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_01.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-1">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_01.jpg')">
 					</div>
 				</a>
 			</div>
 			
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_02.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-2">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_02.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_03.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-3">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_03.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_04.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-4">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_04.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_05.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-5">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_05.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_06.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-6">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_06.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_07.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-7">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_07.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_08.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-8">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_08.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_09.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-9">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_09.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_10.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-10">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_10.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_11.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-11">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_11.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_12.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-12">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_12.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_13.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-13">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_13.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_14.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-14">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_14.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_15.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-15">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_15.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_16.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-16">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_16.jpg')">
 					</div>
 				</a>
 			</div>
 
 			<div class="col-sm-3">
-				<a href="#theModal" class="showModal" data-img="images/projets/projet_17.jpg">
+				<a href="#theModal" class="showModal" data-category="projet" id="image-17">
 					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_17.jpg')">
 					</div>
 				</a>
@@ -231,26 +231,101 @@
 		<br>
 		<div class="row">
 		 	<div class="col-sm-4">
-		 		<a href="#theModal" class="showModal" data-img="images/equipement/pelle.jpg"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
+		 		<a href="#theModal" class="showModal" data-category="equipement" id="image-18"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a href="#theModal" class="showModal" data-img="images/equipement/tracteur.jpg"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
+		 		<a href="#theModal" class="showModal" data-category="equipement" id="image-19"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
 		 	</div>
 		 	<div class="col-sm-4">
-		 		<a href="#theModal" class="showModal" data-img="images/equipement/remorque.jpg"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
+		 		<a href="#theModal" class="showModal" data-category="equipement" id="image-20"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
 		 	</div>
 	 	</div>
+
+	 	<div class="hidden" id="img-repo">
+			<div class="item projet" id="image-1">
+				<img class="img-responsive center-block" src="images/projets/projet_01.jpg">
+			</div>
+			<div class="item projet" id="image-2">
+				<img class="img-responsive center-block" src="images/projets/projet_02.jpg">
+			</div>	
+			<div class="item projet" id="image-3">
+				<img class="img-responsive center-block" src="images/projets/projet_03.jpg">
+			</div>		
+			<div class="item projet" id="image-4">
+				<img class="img-responsive center-block" src="images/projets/projet_04.jpg">
+			</div>	
+			<div class="item projet" id="image-5">
+				<img class="img-responsive center-block" src="images/projets/projet_05.jpg">
+			</div>		
+			<div class="item projet" id="image-6">
+				<img class="img-responsive center-block" src="images/projets/projet_06.jpg">
+			</div>
+			<div class="item projet" id="image-7">
+				<img class="img-responsive center-block" src="images/projets/projet_07.jpg">
+			</div>	
+			<div class="item projet" id="image-8">
+				<img class="img-responsive center-block" src="images/projets/projet_08.jpg">
+			</div>		
+			<div class="item projet" id="image-9">
+				<img class="img-responsive center-block" src="images/projets/projet_09.jpg">
+			</div>	
+			<div class="item projet" id="image-10">
+				<img class="img-responsive center-block" src="images/projets/projet_10.jpg">
+			</div>
+			<div class="item projet" id="image-11">
+				<img class="img-responsive center-block" src="images/projets/projet_11.jpg">
+			</div>
+			<div class="item projet" id="image-12">
+				<img class="img-responsive center-block" src="images/projets/projet_12.jpg">
+			</div>	
+			<div class="item projet" id="image-13">
+				<img class="img-responsive center-block" src="images/projets/projet_13.jpg">
+			</div>		
+			<div class="item projet" id="image-14">
+				<img class="img-responsive center-block" src="images/projets/projet_14.jpg">
+			</div>	
+			<div class="item projet" id="image-15">
+				<img class="img-responsive center-block" src="images/projets/projet_15.jpg">
+			</div>	
+			<div class="item projet" id="image-16">
+				<img class="img-responsive center-block" src="images/projets/projet_16.jpg">
+			</div>	
+			<div class="item projet" id="image-17">
+				<img class="img-responsive center-block" src="images/projets/projet_17.jpg">
+			</div>	
+	 		<div class="item equipement" id="image-18">
+				<img class="img-responsive center-block" src="images/equipement/pelle.jpg">
+			</div>
+			<div class="item equipement" id="image-19">
+				<img class="img-responsive center-block" src="images/equipement/tracteur.jpg">
+			</div>
+			<div class="item equipement" id="image-20">
+				<img class="img-responsive center-block" src="images/equipement/remorque.jpg">
+			</div>				
+		</div>
+
 	</section>
 </div>
 
 <div id="theModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
-     	<div class="modal-header">
-      	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    	</div>
+
       <div class="modal-body">
-        <img src="" id="theModalImg" class="img-responsive center-block">
+      	<div id="modal-carousel" class="carousel">
+   
+          <div class="carousel-inner">           
+          </div>
+            
+          <a class="carousel-control left" href="#modal-carousel" data-slide="prev">
+          	<i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a class="carousel-control right" href="#modal-carousel" data-slide="next">
+          	<i class="glyphicon glyphicon-chevron-right"></i></a>
+            
+        </div>
+      </div>
+      <div class="modal-footer">
+      	<button class="btn btn-default" data-dismiss="modal">Fermer</button>
       </div>
     </div>
   </div>
@@ -321,10 +396,23 @@
 
 <script src="js/script.js"></script>
 <script>
-	$('.showModal').click(function() {
-  	$('#theModalImg').attr('src', $(this).data('img'));
-		$('#theModal').modal({show:true})
-	});
+	$("#modal-carousel").carousel({interval:false});
+
+	/* when clicking a thumbnail */
+	$(".row .showModal").click(function() {
+    var content = $(".carousel-inner");
+    content.empty();  
+  
+  	var id = this.id;
+  	var category = $(this).data('category');
+    var repo = $("#img-repo .item");
+    var repoCopy = repo.filter("." + category).clone();
+    var active = repoCopy.filter("#" + id);
+  
+    active.addClass("active");
+  	content.append(repoCopy);
+  	$('#theModal').modal({show:true})
+	} );
 </script>
 </body>
 </html>
